<resources>
    <string name="app_name">OwlControlTerminal</string>
    <string name="AirplaneIp">无人机IP</string>
    <string name="PortCmd">无人机控制端口</string>
    <string name="PortImageTcp">无人机TCP图像端口</string>
    <string name="PortImageHttp">无人机Http图像端口</string>
    <string name="UseImageModeHttp">使用Http图像获取模式</string>
    <string name="SaveConfig">保存配置</string>
    <string name="Reset">重置默认配置</string>

    <string name="PortUnreachableException">网络不可达</string>

    <string name="SaveOk">保存成功</string>
    <string name="ResetOk">重置成功</string>
    <string name="StartJP">日本手</string>
    <string name="StartUS">美国手 </string>
    <string name="StartJoy">开始JoyCon</string>
    <string name="ControlConfig">控制配置</string>
    <string name="AirplaneConfig">飞行配置</string>
    <string name="MoveOffset">移动步进量</string>
    <!--    <string name="takeoff">Takeoff</string>-->
    <!--    <string name="land">Land</string>-->
    <!--    <string name="camera1">Camera1</string>-->
    <!--    <string name="camera2">Camera2</string>-->
    <!--    <string name="calibrate">Calibrate</string>-->
    <!--    <string name="stop">Stop</string>-->
    <!--    <string name="up">up</string>-->
    <!--    <string name="front">front</string>-->
    <!--    <string name="right">right</string>-->
    <!--    <string name="ccw">ccw</string>-->
    <!--    <string name="back">back</string>-->
    <!--    <string name="cw">cw</string>-->
    <!--    <string name="down">down</string>-->
    <!--    <string name="left">left</string>-->
    <string name="camera1">相机1</string>
    <string name="camera2">相机2</string>
    <string name="takeoff">起飞</string>
    <string name="land">着陆</string>
    <string name="calibrate">校准</string>
    <string name="stop">停止</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="front">前</string>
    <string name="back">后</string>
    <string name="cw">顺</string>
    <string name="ccw">逆</string>
    <string name="owl_control_terminal">Owl手机控制终端</string>
</resources>