<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainConfigActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/text_airplaneIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AirplaneIp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editAirplaneIp"
                app:layout_constraintEnd_toStartOf="@+id/editAirplaneIp" />

            <EditText
                android:id="@+id/editAirplaneIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/AirplaneIp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editPortCmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PortCmd"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/editAirplaneIp"
                app:layout_constraintTop_toBottomOf="@+id/editAirplaneIp" />

            <EditText
                android:id="@+id/editPortImageHttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PortImageHttp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/editPortImageTcp"
                app:layout_constraintTop_toBottomOf="@+id/editPortImageTcp" />

            <CheckBox
                android:id="@+id/checkUseImageModeHttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UseImageModeHttp"
                app:layout_constraintStart_toStartOf="@+id/editPortImageHttp"
                app:layout_constraintTop_toBottomOf="@+id/editPortImageHttp" />

            <EditText
                android:id="@+id/editPortImageTcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/PortImageTcp"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/editPortCmd"
                app:layout_constraintTop_toBottomOf="@+id/editPortCmd" />

            <TextView
                android:id="@+id/text_editPortCmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PortCmd"
                app:layout_constraintBaseline_toBaselineOf="@+id/editPortCmd"
                app:layout_constraintEnd_toStartOf="@+id/editPortCmd" />

            <TextView
                android:id="@+id/text_PortImageTcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PortImageTcp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editPortImageTcp"
                app:layout_constraintEnd_toStartOf="@+id/editPortImageTcp" />

            <TextView
                android:id="@+id/text_PortImageHttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PortImageHttp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editPortImageHttp"
                app:layout_constraintEnd_toStartOf="@+id/editPortImageHttp" />

            <TextView
                android:id="@+id/text_UseImageModeHttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UseImageModeHttp"
                app:layout_constraintBaseline_toBaselineOf="@+id/checkUseImageModeHttp"
                app:layout_constraintEnd_toStartOf="@+id/checkUseImageModeHttp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SaveConfig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkUseImageModeHttp" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkUseImageModeHttp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>